--- a/2. Manejo de memoria/Makefile
+++ b/2. Manejo de memoria/Makefile
@@ -1,6 +1,6 @@
 CC=g++
 
-all: apuntador memoria lifetimes dinamica
+all: apuntador memoria lifetimes dinamica referencias ejemplo_listas
 
 apuntador: apuntador.cpp
 	$(CC) apuntador.cpp -o apuntador
@@ -13,6 +13,12 @@ lifetimes: lifetimes.cpp
 
 dinamica: dinamica.cpp
 	$(CC) dinamica.cpp -o dinamica
+
+referencias: referencias.cpp
+	$(CC) referencias.cpp -o referencias
+
+ejemplo_listas: ejemplo_listas.cpp
+	$(CC) ejemplo_listas.cpp -o ejemplo_listas
 
 clean:
 	rm -f apuntador memoria lifetimes dinamica
